--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "class-32-starter-code-todo",
+  "name": "new",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "todo/src/index.js",
+  "main": "src/index.js",
   "dependencies": {
+    "@nmq/q": "1.0.5",
     "node-sass": "^4.12.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-jsonschema-form": "1.8.0",
-    "react-router-dom": "5.0.1",
-    "react-scripts": "3.1.1",
-    "uuid": "3.3.3"
+    "react-scripts": "3.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "3.3.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && aws s3 sync ./build s3://react-tdd-demo --acl public-read"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
